Fix mobile sticky menu not showing from 768 to 620px.

--- a/frontend/packages/volto-light-theme/src/theme/_mobile-sticky-menu.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_mobile-sticky-menu.scss
@@ -8,7 +8,7 @@
   height: 100px;
   flex-direction: column;
   background-color: var(--sticky-menu-color, #555);
-  @media only screen and (max-width: $narrow-container-width) {
+  @media only screen and (max-width: $largest-mobile-screen) {
     display: block;
   }
 
